Added Names to buttons in Free Play Board FP Board almost fully working, still cant delete pieces Still missing   content descriptions   start button listener   start button conditions   setings menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">ChessCommander</string>
+    <item type="id" name="tag0"></item>
+    <item type="id" name="tag1"></item>
+    <item type="id" name="tag2"></item>
 </resources>
