--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Chess Commander</string>
+    <string name="pve_select_color_toast">Must select piece color</string>
     <item type="id" name="tagpiece"></item>
     <item type="id" name="tagcolor"></item>
     <item type="id" name="tagbench"></item>
